# 1dprog

./: #Initialize.f90#  CMakeLists.txt  Initialize.f90  Module.f90  README.md  check_Nx.plt  gnuplot.f90  main.f90
Coef/: CMakeLists.txt
Length/: CMakeLists.txt  Gauge_Length.f90~  Gauge_Length0.f90
Velocity/: CMakeLists.txt  Current_Velocity_operation.f90  zh_Velocity_operation.f90~
base/: CG.f90  Imaginary_time.f90  Phase_matching.f90  base_plot.f90
plt/: animate.gp  animate.plt  animate_kf.gp  animate_kf.plt  check.plt  check_Nk.plt  check_dt.plt  ft_blo.plt
src/: CMakeLists.txt  FourieT.f90  Initialize.f90  Module.f90  gnuplot.f90  input.data  input.f90  main.f90
src/Coef/: Coef.f90
src/Length/: CMakeLists.txt  Current_Length_operation0.f90  Gauge_Length.f90  zh_Length_operation.f90  zh_Length_operation0.f90
src/Velocity/: Current_Velocity_operation.f90  Gauge_Velocity.f90  Gauge_Velocity.f90~  zh_Velocity_operation.f90
src/base/: CG.f90  CG.f90~  CMakeLists.txt  Imaginary_time.f90  Phase_matching.f90  base_plot.f90  h0_operation.f90  h0_operation.f90~
